Fix: added pre-wrap to eventData class

--- a/ui/scss/_offCanvas.scss
+++ b/ui/scss/_offCanvas.scss
@@ -1,5 +1,5 @@
 .eventData {
     font-family:monospace;
     font-size: 12px;
-    white-space: pre;
+    white-space: pre-wrap;
 }
